Killfeed and visibility update (aka bug fixes)

--- a/src/HUD/MapSeries/mapseries.scss
+++ b/src/HUD/MapSeries/mapseries.scss
@@ -74,9 +74,17 @@
 			}
 		}
 		.veto_score {
-			width: 77px;
-			text-align: center;
-			font-size: 14px;
+			background: white;
+			color: black;
+			width: 60px;
+			height: 25px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-size: 10px;
+			font-weight: 700;
+			font-family: Montserrat;
+			text-transform: uppercase;
 		}
 		.logo {
 			display: flex;
